[package]
authors      = ["Absolutex <lxl66566@gmail.com>"]
categories   = ["os"]
description  = "Easily manage Windows environment variables permanently."
edition      = "2021"
homepage     = "https://github.com/lxl66566/windows-env"
keywords     = ["windows", "env", "environment", "registry"]
license      = "MIT"
name         = "windows-env"
readme       = "README.md"
repository   = "https://github.com/lxl66566/windows-env"
rust-version = "1.70"
version      = "0.2.1"

[dependencies]
palc    = { version = "0.0.2", optional = true }
windows = { version = "0.62.1", features = ["Win32_UI_WindowsAndMessaging"] }
winreg  = "0.55.0"

[features]
bin     = ["palc"]
default = []

[lib]
name = "windows_env"

[[bin]]
name              = "wenv"
path              = "src/main.rs"
required-features = ["bin"]

[[example]]
name = "main"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
